src/components/Accordion/Accordion.css
.accordion {
  position: relative;
}

.panel {
  .collapse {
    overflow: auto !important;
  }

  .summary {
    display: flex;
    justify-content: space-between;
    align-items: center;
    cursor: pointer;
    position: relative;
    padding: var(--spacing-small) var(--spacing-medium);

    &::before {
      content: '';
      display: block;
      width: 3px;
      height: 100%;
      height: 24px;
      background-color: var(--grey-300);
      position: absolute;
      left: 0;
      top: 50%;
      transform: translateY(-50%);
      transition: backgroun-color 0.2s ease-in-out;
    }

    .label {
      font-weight: bold;
      font-size: 16px;
      color: var(--grey-800);
    }
  }

  .chevron {
    width: 12px;
    height: 6px;
    position: relative;
    color: var(--grey-800);
    margin-right: 2px;

    &::before,
    &::after {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      height: 8.48px;
      width: 0;
      border: 1px solid currentColor;
      transform-origin: center top;
    }

    &::before {
      transform: rotate(-45deg);
    }

    &::after {
      transform: translateX(11px) rotate(45deg);
    }
  }

  &[data-open='true'] {
    & > .summary {
      &::before {
        background-color: var(--blue-500);
      }

      :global(.bp3-icon[icon='chevron-down']) {
        transform: rotate(180deg);
        color: var(--blue-500);
      }

      & > .chevron {
        transform: rotate(180deg);
      }
    }

    & .details {
      background-color: var(--grey-100);
    }
  }

  .details {
    padding: var(--spacing-xlarge) var(--spacing-medium);
  }
}

